--- a/style.css
+++ b/style.css
@@ -69,9 +69,11 @@ button:hover {
 
 input {
 	border-radius: 5px;
+	max-width: 100%;
 	width: 400px;
 	height: 30px;
 	border: 1px solid #adb4b9;
+	box-sizing: border-box;
 }
 
 .input-group {
@@ -101,3 +103,10 @@ input {
 	text-align: center;
 	color: white;
 }
+
+@media screen and (max-width: 360px) {
+	.container {
+	margin: 10px;
+	}
+}
+
